--- a/wso2is/is/cf-dev.yaml
+++ b/wso2is/is/cf-dev.yaml
@@ -438,10 +438,10 @@ Resources:
             - ''
             - - !Ref Product
           PropagateAtLaunch: 'true'
-    CreationPolicy:
-      ResourceSignal:
-        Count: 1
-        Timeout: PT20M
+#    CreationPolicy:
+#      ResourceSignal:
+#        Count: 1
+#        Timeout: PT20M
     UpdatePolicy:
       AutoScalingRollingUpdate:
         MaxBatchSize: '2'
@@ -452,118 +452,118 @@ Resources:
         WaitOnResourceSignals: true
     DependsOn:
       - WSO2LoadBalancer
-  WSO2Node2LaunchConfiguration:
-    Type: 'AWS::AutoScaling::LaunchConfiguration'
-    Properties:
-      ImageId: !Ref AMIid
-      InstanceType: !Ref WSO2InstanceType
-      InstanceMonitoring: 'false'
-      BlockDeviceMappings:
-        - DeviceName: /dev/sda1
-          Ebs:
-            VolumeSize: '20'
-            VolumeType: gp2
-            DeleteOnTermination: 'true'
-      KeyName: !Ref KeyPairName
-      SecurityGroups:
-        - !Ref WSO2SecurityGroup
-      UserData: !Base64
-        'Fn::Sub': |
-          Content-Type: multipart/mixed; boundary="//"
-          MIME-Version: 1.0
-
-          --//
-          Content-Type: text/cloud-config; charset="us-ascii"
-          MIME-Version: 1.0
-          Content-Transfer-Encoding: 7bit
-          Content-Disposition: attachment; filename="cloud-config.txt"
-
-          #cloud-config
-          cloud_final_modules:
-          - [scripts-user, always]
-
-          --//
-          Content-Type: text/x-shellscript; charset="us-ascii"
-          MIME-Version: 1.0
-          Content-Transfer-Encoding: 7bit
-          Content-Disposition: attachment; filename="userdata.txt"
-
-          #!/bin/bash
-          export PATH=~/.local/bin:$PATH
-          wget https://github.com/gvalkov/tailon/releases/download/v1.0.0/tailon_1.0.0_linux_amd64.tar.gz -P /home/wso2user/
-          chmod +x /home/wso2user/tailon_1.0.0_linux_amd64.tar.gz
-          tar -xvf /home/wso2user/tailon_1.0.0_linux_amd64.tar.gz -C /home/wso2user
-          unzip /home/wso2user/${Product}-${Version}.zip -d /home/wso2user/
-          sed -i "s/ACCESS_KEY/${AWSAccessKeyId}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
-          sed -i "s/REGION_NAME/${AWS::Region}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
-          sed -i "s/ALB_DNS_NAME/${WSO2LoadBalancer.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/conf/carbon.xml
-          sed -i "s/CF_DB_USERNAME/${DBUsername}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
-          sed -i "s/CF_DB_PASSWORD/${DBPassword}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
-          sed -i "s/RDS_DNS_NAME/${WSO2DBInstance.Endpoint.Address}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
-          sed -i "s^SECRET_KEY^${AWSAccessKeySecret}^g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
-          tar -xvf /opt/OpenJDK8U-jdk_8u222_linux_x64.tar.gz -C /opt/
-          export PRIVATE_IP=$(ifconfig | grep -m 1 'inet ' | awk '{print $2}')
-          export LogserverIP=${WSO2LoggingInstance.PrivateIp}
-          echo "$LogserverIP logserver" >> /etc/hosts
-          sed -i "s/LOCAL-MEMBER-HOST/$PRIVATE_IP/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
-          /home/wso2user/${Product}-${Version}/bin/wso2server.sh start
-          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
-          cat /dev/null > ~/.bash_history && history -c
-          nohup /home/wso2user/tailon alias=wso2_logs,/home/wso2user/${Product}-${Version}/repository/logs/* > nohup.out 2>&1 &
-          end=$((SECONDS+800))
-          while [ $SECONDS -lt $end ] ; do
-              wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
-              if [ $? -eq "0" ] ; then
-                sleep 30
-                /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2Node2AutoScalingGroup --region ${AWS::Region}
-              fi
-          done
-    DependsOn:
-      - WSO2SecurityGroup
-      - WSO2LoadBalancer
-      - WSO2VPCInternetGatewayAttachment
-      - WSO2DBInstance
-      - WSO2BastionInstance
-      - WSO2LoggingInstance
-  WSO2Node2AutoScalingGroup:
-    Type: 'AWS::AutoScaling::AutoScalingGroup'
-    Properties:
-      LaunchConfigurationName: !Ref WSO2Node2LaunchConfiguration
-      DesiredCapacity: 1
-      MinSize: 1
-      MaxSize: 2
-      TargetGroupARNs:
-        - !Ref WSO2ALBTargetGroup
-        - !Ref WSO28243ALBTargetGroup
-        - !Ref WSO2ServicesALBTargetGroup
-      VPCZoneIdentifier:
-        - !Ref WSO2PrivateSubnet2
-      Tags:
-        - Key: Name
-          Value: !Join
-            - ''
-            - - 'WSO2Instance2'
-              - !Ref Environment
-          PropagateAtLaunch: 'true'
-        - Key: cluster
-          Value: !Join
-            - ''
-            - - !Ref Product
-          PropagateAtLaunch: 'true'
-    CreationPolicy:
-      ResourceSignal:
-        Count: 1
-        Timeout: PT20M
-    UpdatePolicy:
-      AutoScalingRollingUpdate:
-        MaxBatchSize: '2'
-        MinInstancesInService: '1'
-        PauseTime: PT10M
-        SuspendProcesses:
-          - AlarmNotification
-        WaitOnResourceSignals: true
-    DependsOn:
-      - WSO2LoadBalancer
+#  WSO2Node2LaunchConfiguration:
+#    Type: 'AWS::AutoScaling::LaunchConfiguration'
+#    Properties:
+#      ImageId: !Ref AMIid
+#      InstanceType: !Ref WSO2InstanceType
+#      InstanceMonitoring: 'false'
+#      BlockDeviceMappings:
+#        - DeviceName: /dev/sda1
+#          Ebs:
+#            VolumeSize: '20'
+#            VolumeType: gp2
+#            DeleteOnTermination: 'true'
+#      KeyName: !Ref KeyPairName
+#      SecurityGroups:
+#        - !Ref WSO2SecurityGroup
+#      UserData: !Base64
+#        'Fn::Sub': |
+#          Content-Type: multipart/mixed; boundary="//"
+#          MIME-Version: 1.0
+#
+#          --//
+#          Content-Type: text/cloud-config; charset="us-ascii"
+#          MIME-Version: 1.0
+#          Content-Transfer-Encoding: 7bit
+#          Content-Disposition: attachment; filename="cloud-config.txt"
+#
+#          #cloud-config
+#          cloud_final_modules:
+#          - [scripts-user, always]
+#
+#          --//
+#          Content-Type: text/x-shellscript; charset="us-ascii"
+#          MIME-Version: 1.0
+#          Content-Transfer-Encoding: 7bit
+#          Content-Disposition: attachment; filename="userdata.txt"
+#
+#          #!/bin/bash
+#          export PATH=~/.local/bin:$PATH
+#          wget https://github.com/gvalkov/tailon/releases/download/v1.0.0/tailon_1.0.0_linux_amd64.tar.gz -P /home/wso2user/
+#          chmod +x /home/wso2user/tailon_1.0.0_linux_amd64.tar.gz
+#          tar -xvf /home/wso2user/tailon_1.0.0_linux_amd64.tar.gz -C /home/wso2user
+#          unzip /home/wso2user/${Product}-${Version}.zip -d /home/wso2user/
+#          sed -i "s/ACCESS_KEY/${AWSAccessKeyId}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
+#          sed -i "s/REGION_NAME/${AWS::Region}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
+#          sed -i "s/ALB_DNS_NAME/${WSO2LoadBalancer.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/conf/carbon.xml
+#          sed -i "s/CF_DB_USERNAME/${DBUsername}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
+#          sed -i "s/CF_DB_PASSWORD/${DBPassword}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
+#          sed -i "s/RDS_DNS_NAME/${WSO2DBInstance.Endpoint.Address}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
+#          sed -i "s^SECRET_KEY^${AWSAccessKeySecret}^g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
+#          tar -xvf /opt/OpenJDK8U-jdk_8u222_linux_x64.tar.gz -C /opt/
+#          export PRIVATE_IP=$(ifconfig | grep -m 1 'inet ' | awk '{print $2}')
+#          export LogserverIP=${WSO2LoggingInstance.PrivateIp}
+#          echo "$LogserverIP logserver" >> /etc/hosts
+#          sed -i "s/LOCAL-MEMBER-HOST/$PRIVATE_IP/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
+#          /home/wso2user/${Product}-${Version}/bin/wso2server.sh start
+#          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
+#          cat /dev/null > ~/.bash_history && history -c
+#          nohup /home/wso2user/tailon alias=wso2_logs,/home/wso2user/${Product}-${Version}/repository/logs/* > nohup.out 2>&1 &
+#          end=$((SECONDS+800))
+#          while [ $SECONDS -lt $end ] ; do
+#              wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
+#              if [ $? -eq "0" ] ; then
+#                sleep 30
+#                /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2Node2AutoScalingGroup --region ${AWS::Region}
+#              fi
+#          done
+#    DependsOn:
+#      - WSO2SecurityGroup
+#      - WSO2LoadBalancer
+#      - WSO2VPCInternetGatewayAttachment
+#      - WSO2DBInstance
+#      - WSO2BastionInstance
+#      - WSO2LoggingInstance
+#  WSO2Node2AutoScalingGroup:
+#    Type: 'AWS::AutoScaling::AutoScalingGroup'
+#    Properties:
+#      LaunchConfigurationName: !Ref WSO2Node2LaunchConfiguration
+#      DesiredCapacity: 1
+#      MinSize: 1
+#      MaxSize: 2
+#      TargetGroupARNs:
+#        - !Ref WSO2ALBTargetGroup
+#        - !Ref WSO28243ALBTargetGroup
+#        - !Ref WSO2ServicesALBTargetGroup
+#      VPCZoneIdentifier:
+#        - !Ref WSO2PrivateSubnet2
+#      Tags:
+#        - Key: Name
+#          Value: !Join
+#            - ''
+#            - - 'WSO2Instance2'
+#              - !Ref Environment
+#          PropagateAtLaunch: 'true'
+#        - Key: cluster
+#          Value: !Join
+#            - ''
+#            - - !Ref Product
+#          PropagateAtLaunch: 'true'
+#    CreationPolicy:
+#      ResourceSignal:
+#        Count: 1
+#        Timeout: PT20M
+#    UpdatePolicy:
+#      AutoScalingRollingUpdate:
+#        MaxBatchSize: '2'
+#        MinInstancesInService: '1'
+#        PauseTime: PT10M
+#        SuspendProcesses:
+#          - AlarmNotification
+#        WaitOnResourceSignals: true
+#    DependsOn:
+#      - WSO2LoadBalancer
   WSO2LoadBalancerSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
